--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+.homeBar {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  position: fixed;
+  width: 100%;
+  bottom: 0;
   color: white;
+  font-size: 25px;
+  border: 2px black solid;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.homeBar * {
+  margin: 10px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homeBar .gbtn {
+  border: 2px black solid;
+  box-shadow: 0.1px 0.1px 2px rgba(0, 0, 0, 0.247);
+}
+
+.inputs {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  color: white;
+  font-size: 25px;
+
+  margin-bottom: 25px;
+  margin-left: 10px;
+}
+
+.textinput {
+  overflow-wrap: break-word;
+}
+
+
+#lengthCos {
+  color: #000;
+  font-size: 12px;
+}
+.name {
+  text-align: center;
+  margin-top: 10px;
+}
+
+
+.message-box {
+  margin: 5px;
+}
+#usr {
+  border-bottom: 2px black solid;
+  border-radius: 2.5px;
 }
